--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/kit": "^2.25.1",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
+		"sass": "^1.89.2",
 		"svelte": "^5.36.13",
 		"svelte-check": "^4.3.0",
+		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.8.3",
 		"vite": "^7.0.5"
 	},
